# Bhutan_Forest_Stratification

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETE_SUMMARY.md  CONTRIBUTING.md  DATA.md  FINAL_STATUS.md  LICENSE  PROJECT_OVERVIEW.md  Project Refinement Strategy.md  README.md  REPOSITORY_STATUS.md  ROADMAP.md  SECURITY.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  run.ps1  test_phase2_standalone.py  verify_phase2.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_improvement.md  feature_request.md
.github/workflows/: ci-cd.yml  python-ci.yml  r-pipeline-ci.yml
context/: Methods.md  Research Paper Outline.md  contracts.md
manuscripts/Forest Ecology and Management/: paper_plan.md
manuscripts/Forest Ecology and Management/latex/: Makefile  main.tex  references.bib
manuscripts/draft/: manuscript_draft.md
python/: caching.py  config.py  performance.py  progress.py  run_pipeline.py  setup.py  utils.py  validation.py
python/modules/: 00_data_inspection.py  01_data_cleaning.py  01b_qc_after_cleaning.py  02_env_extraction.py  02b_qc_after_env_extraction.py  03_alpha_diversity.py  04_beta_diversity.py  05_cca_ordination.py  06_indicator_species.py  07_co_occurrence.py  08_evi_spatial_analysis.py  08_evi_trends.py  08b_evi_spatial_analysis.py  09_sci_index.py  10_spatial_mapping.py  11_reporting.py
tests/: __init__.py  conftest.py  test_config.py  test_modules.py  test_parallel.py  test_smoke.py  test_utils.py  test_utils_unit.py  test_validation.py
