[project]
name = "bhutan-forest-stratification"
version = "0.1.0"
description = "Python pipeline for forest stratification and vertical zonation in Bhutan"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "matplotlib>=3.7",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "scikit-bio>=0.5.9",
  "networkx>=3.1",
  "geopandas>=0.14",
  "rasterio>=1.3",
  "shapely>=2.0",
  "tqdm>=4.65",
  "psutil>=5.9"
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["python"]
